Alteração Model car_category e before_action

--- a/config/locales/car_categories.yml
+++ b/config/locales/car_categories.yml
@@ -1,12 +1,12 @@
 pt-BR:
   activerecord:
     models:
-      carcategory: 
+      car_category: 
         one: Categoria de Carro
         other: Categorias de Carros
-    attibutes:
-      carcategory:
+    attributes:
+      car_category:
         name: Nome
-        dailyrate: Diárias
+        daily_rate: Diárias
         insurance: Seguro 
-        thirdinsurance: Seguro para terceiros
+        third_insurance: Seguro para terceiros
