Validações Clientes e modelos de carros

--- a/config/locales/rentals.yml
+++ b/config/locales/rentals.yml
@@ -10,4 +10,7 @@ pt-BR:
         end_date: Data final
         motorization: Motor
         car_category_id: Categoria
-        customer_id: Nome
+        car_category: Categoria
+        customer_id: Cliente
+        customer: Cliente
+        
