human.attributes_rental

--- a/config/locales/car_models.yml
+++ b/config/locales/car_models.yml
@@ -11,4 +11,6 @@ pt-BR:
         motorization: Motor
         year: Ano de fabricação 
         car_category_id: Categoria
+        car_category: Categoria
         manufacturer_id: Fabricante
+        manufacturer: Fabricante
